Kubernetes/Zadanie6/code/depl2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bb-demo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      bb: web
  template:
    metadata:
      labels:
        bb: web
    spec:
      containers:
      - name: bb-site
        image: bpelikan/bulletinboard:1.0 #nginx #bpelikan/bulletinboard:1.0
        #ports:
        #- containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bb-entrypoint
  namespace: default
spec:
  type: LoadBalancer
  selector:
    bb: web
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
